# yocto-for-beginner

./: README.md  meson.build  yocto-doc-build.sh
.github/workflows/: .yocto-docbook.yml.swp  yocto-docbook.yml
docbook/usr/local/share/gtk-doc/html/yocto-docbook/: Getting started.html  hello-world-example.html  index.html  yocto-docbook.devhelp2
docs/: '  getting-started.xml  hello-world.xml  meson.build  yocto-main.xml
docs/images/: Untitled Diagram.drawio
tools/: db4-upgrade.xsl
