
gnome.gtkdoc('yocto-docbook',
               main_xml : 'yocto-main.xml',
               namespace : 'yocto',
               src_dir : 'docs',
               html_assets : [
                 'images/yocto-logo.png',
                 
               ],
 #               content_files : [
  #               'hello-world.xml'],
               install: true,
               check: true)
